# IG2023

./: .gitmodules  CMakeLists.txt  README.md
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
shaders/: camera_vs.glsl  light_fs.glsl
src/: assimp_glm_helpers.h  bone.h  camera.h  filesystem.h  generate_cube.h  main.cpp  mesh.cpp  mesh.h  model.h  shader.cpp  shader.h
src/shaders/: light_fs.glsl  simple_fs.glsl  texture_fs.glsl
